ready for production build

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>SpaRepaso</title>
-    <base href="/" />
+    <title>Heroes app</title>
+    <base href="" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
