--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
-  </head>
+  <link rel="stylesheet" href="styles.e996bbf4435635ce065d.css"></head>
   <body>
     <app-root></app-root>
-  </body>
+  <script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.c6871e56cb80756a5498.js"></script><script type="text/javascript" src="main.027aa81b3fab804c7aae.js"></script></body>
 </html>
